--- a/src/AplikasiDuaAngka.form
+++ b/src/AplikasiDuaAngka.form
@@ -118,6 +118,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="PertamaText">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="PertamaTextKeyTyped"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="KeduaText">
         </Component>
